--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -13,10 +13,81 @@
 		android:layout_height="wrap_content"
 		android:layout_marginBottom="56dp"
 		android:fillViewport="true">
+
 		<LinearLayout
-			android:orientation="vertical"
-			android:layout_width="fill_parent"
-			android:layout_height="fill_parent">
+		    android:layout_width="fill_parent"
+		    android:layout_height="fill_parent"
+		    android:orientation="vertical" >
+
+			<TableLayout
+			    android:layout_width="match_parent"
+			    android:layout_height="wrap_content"
+			    android:stretchColumns="0,1,2" >
+
+			    <TableRow
+			        android:id="@+id/tableRow1"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content" >
+
+			        <TextView
+			            android:id="@+id/textView1"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
+			            android:text="@string/location" />
+
+			        <TextView
+			            android:id="@+id/positionLat"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
+			            android:textAlignment="textEnd" />
+
+			        <TextView
+			            android:id="@+id/positionLon"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
+			            android:textAlignment="textEnd" />
+
+			    </TableRow>
+
+			    <TableRow
+			        android:id="@+id/tableRow2"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content" >
+
+			        <TextView
+			            android:id="@+id/TextView01"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
+			            android:text="@string/lte_signal_strength" />
+
+			        <TextView
+			            android:id="@+id/sigstrength"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
+			            android:textAlignment="textEnd" />
+
+			    </TableRow>
+
+			    <TableRow
+			        android:id="@+id/tableRow3"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content" >
+
+			        <TextView
+			            android:id="@+id/textView2"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
+			            android:text="@string/serving_lte_cell_id" />
+
+			        <TextView
+			            android:id="@+id/cellid"
+			            android:layout_width="wrap_content"
+			            android:layout_height="wrap_content"
+			            android:textAlignment="textEnd" />
+
+			    </TableRow>
+			</TableLayout>
+
 			<TextView  
 				android:layout_width="fill_parent" 
 				android:layout_height="wrap_content" 
