--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -85,7 +85,7 @@
 			        android:layout_height="wrap_content" >
 
 			        <TextView
-			            android:id="@+id/textView3"
+			            android:id="@+id/bsLabel"
 			            android:layout_width="wrap_content"
 			            android:layout_height="wrap_content"
 			            android:text="@string/cdma_1xrtt_base_station" />
@@ -102,7 +102,7 @@
 			        android:layout_height="wrap_content" >
 
 			        <TextView
-			            android:id="@+id/textView4"
+			            android:id="@+id/sigStrengthLabel"
 			            android:layout_width="wrap_content"
 			            android:layout_height="wrap_content"
 			            android:text="@string/_1xrtt_signal_strength" />
