--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -29,7 +29,8 @@
             android:id="@+id/positionLatLon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="textEnd" />
+            android:text="@string/enable_gps"
+            android:textColor="@android:color/primary_text_dark" />
 
         <TextView
             android:id="@+id/textView2"
@@ -42,7 +43,7 @@
             android:id="@+id/cellid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="textEnd" />
+            android:textColor="@android:color/primary_text_dark" />
 
         <TextView
             android:id="@+id/TextView01"
@@ -55,7 +56,7 @@
             android:id="@+id/sigstrength"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="textEnd" />
+            android:textColor="@android:color/primary_text_dark" />
 
         <TextView
             android:id="@+id/bsLabel"
@@ -67,7 +68,7 @@
         <TextView
             android:id="@+id/cdma_sysinfo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" android:textColor="@android:color/primary_text_dark" />
 
         <TextView
             android:id="@+id/sigStrengthLabel"
@@ -79,7 +80,7 @@
         <TextView
             android:id="@+id/cdmaSigStrength"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" android:textColor="@android:color/primary_text_dark" />
     </LinearLayout>
 
     <WebView
