--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -36,8 +36,29 @@
                 android:id="@+id/positionLatLon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="textEnd"
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/textview6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5sp"
+                android:text="@string/speed"
                 android:textColor="@android:color/primary_text_dark" />
+
+            <TextView
+                android:id="@+id/speed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
         </TableRow>
 
         <TableRow
@@ -57,8 +78,8 @@
                 android:id="@+id/cellid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="textEnd"
-                android:textColor="@android:color/primary_text_dark" />
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
         </TableRow>
 
         <TableRow
@@ -78,8 +99,8 @@
                 android:id="@+id/sigstrength"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAlignment="textEnd"
-                android:textColor="@android:color/primary_text_dark" />
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
         </TableRow>
 
         <TableRow
@@ -99,7 +120,8 @@
                 android:id="@+id/cdma_sysinfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/primary_text_dark" />
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
         </TableRow>
 
         <TableRow
@@ -119,7 +141,8 @@
                 android:id="@+id/cdmaSigStrength"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/primary_text_dark" />
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
         </TableRow>
     </TableLayout>
 
