--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -137,12 +137,32 @@
                 android:text="@string/_1xrtt_signal_strength"
                 android:textColor="@android:color/primary_text_dark" />
 
+            <LinearLayout
+            android:id="@+id/cdmaSigs"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="2" android:weightSum="2"
+            android:orientation="horizontal" >
+
             <TextView
                 android:id="@+id/cdmaSigStrength"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="left" android:layout_weight="1"
+                android:text="@string/no_signal"
                 android:textColor="@android:color/primary_text_dark"
                 android:textIsSelectable="true" />
+
+            <TextView
+                android:id="@+id/evdoSigStrength"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_weight="1"
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
+
+        </LinearLayout>
         </TableRow>
     </TableLayout>
 
