Resources for preferences pane.

--- a/res/menu/mainmenu.xml
+++ b/res/menu/mainmenu.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item
-        android:id="@+id/mapbasestation"
-        android:onClick="toggleBsMarker"
-        android:title="@string/show_base_station">
-    </item>
-    <item
-        android:id="@+id/units"
-        android:onClick="unitsChanged"
-        android:title="@string/traditional_units">
-    </item>
-    <item
+
+    <item android:id="@+id/settings" 
+        android:icon="@drawable/ic_action_settings"
+        android:showAsAction="ifRoom|withText" android:title="@string/title_activity_settings"></item>
+
+        <item
         android:id="@+id/exit"
         android:checkable="false"
         android:onClick="exitApp"
-        android:title="@string/exit" android:showAsAction="ifRoom|withText">
-    </item>
-
+        android:title="@string/exit" android:showAsAction="ifRoom|withText" />
+    
 </menu>
