--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -7,145 +7,166 @@
     android:background="@android:color/black"
     android:gravity="fill"
     android:orientation="horizontal"
-    android:padding="3dp"
-    android:weightSum="1" >
+    android:padding="3dp" >
 
-    <LinearLayout
-        android:id="@+id/LinearLayout1"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="fill_parent"
-        android:layout_weight=".4"
-        android:orientation="vertical"
-        android:paddingRight="3dp" >
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/location"
-            android:textColor="@android:color/holo_blue_dark" />
-
-        <TextView
-            android:id="@+id/positionLatLon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/primary_text_dark"
-            android:textIsSelectable="true" />
-
-        <TextView
-            android:id="@+id/textview6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/speed"
-            android:textColor="@android:color/holo_blue_dark" />
-
-        <TextView
-            android:id="@+id/speed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/primary_text_dark"
-            android:textIsSelectable="true" />
-
-        <TextView
-            android:id="@+id/TextView03"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/current_network"
-            android:textColor="@android:color/holo_blue_dark" />
-
-        <TextView
-            android:id="@+id/networkString"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/none"
-            android:textColor="@android:color/primary_text_dark"
-            android:textIsSelectable="true" />
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/serving_lte_cell_id"
-            android:textColor="@android:color/holo_blue_dark" />
-
-        <TextView
-            android:id="@+id/cellid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/none"
-            android:textColor="@android:color/primary_text_dark"
-            android:textIsSelectable="true" />
-
-        <TextView
-            android:id="@+id/TextView01"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/lte_signal_strength"
-            android:textColor="@android:color/holo_blue_dark" />
-
-        <TextView
-            android:id="@+id/sigstrength"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/no_signal"
-            android:textColor="@android:color/primary_text_dark"
-            android:textIsSelectable="true" />
-
-        <TextView
-            android:id="@+id/bsLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cdma_1xrtt_base_station"
-            android:textColor="@android:color/holo_blue_dark" />
-
-        <TextView
-            android:id="@+id/cdma_sysinfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/none"
-            android:textColor="@android:color/primary_text_dark"
-            android:textIsSelectable="true" />
-
-        <TextView
-            android:id="@+id/sigStrengthLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/_1xrtt_signal_strength"
-            android:textColor="@android:color/holo_blue_dark" />
+        android:layout_height="wrap_content"
+        android:id="@+id/scrollView"
+        android:layout_weight="2">
 
         <LinearLayout
-            android:id="@+id/cdmaSigs"
+            android:id="@+id/LinearLayout1"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:columnCount="2"
-            android:orientation="horizontal"
-            android:weightSum="2" >
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:paddingRight="3dp" >
 
             <TextView
-                android:id="@+id/cdmaSigStrength"
+                android:id="@+id/textView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_weight="1"
+                android:text="@string/location"
+                android:textColor="@android:color/holo_blue_dark" />
+
+            <TextView
+                android:id="@+id/positionLatLon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
+
+            <TextView
+                android:id="@+id/textview6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/speed"
+                android:textColor="@android:color/holo_blue_dark" />
+
+            <TextView
+                android:id="@+id/speed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
+
+            <TextView
+                android:id="@+id/TextView03"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/current_network"
+                android:textColor="@android:color/holo_blue_dark" />
+
+            <TextView
+                android:id="@+id/networkString"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/none"
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/serving_lte_cell_id"
+                android:textColor="@android:color/holo_blue_dark" />
+
+            <TextView
+                android:id="@+id/cellid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/none"
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true" />
+
+            <TextView
+                android:id="@+id/TextView01"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/lte_signal_strength"
+                android:textColor="@android:color/holo_blue_dark" />
+
+            <TextView
+                android:id="@+id/sigstrength"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/no_signal"
                 android:textColor="@android:color/primary_text_dark"
                 android:textIsSelectable="true" />
 
             <TextView
-                android:id="@+id/evdoSigStrength"
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_weight="1"
+                android:layout_marginRight="5sp"
+                android:text="@string/other_lte_sites"
+                android:textColor="@android:color/holo_blue_dark" />
+
+            <TextView
+                android:id="@+id/otherLteSites"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true"
+                android:text="@string/none" />
+
+            <TextView
+                android:id="@+id/bsLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cdma_1xrtt_base_station"
+                android:textColor="@android:color/holo_blue_dark" />
+
+            <TextView
+                android:id="@+id/cdma_sysinfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/none"
                 android:textColor="@android:color/primary_text_dark"
                 android:textIsSelectable="true" />
+
+            <TextView
+                android:id="@+id/sigStrengthLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/_1xrtt_signal_strength"
+                android:textColor="@android:color/holo_blue_dark" />
+
+            <LinearLayout
+                android:id="@+id/cdmaSigs"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:orientation="horizontal"
+                android:weightSum="2" >
+
+                <TextView
+                    android:id="@+id/cdmaSigStrength"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_weight="1"
+                    android:text="@string/no_signal"
+                    android:textColor="@android:color/primary_text_dark"
+                    android:textIsSelectable="true" />
+
+                <TextView
+                    android:id="@+id/evdoSigStrength"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_weight="1"
+                    android:textColor="@android:color/primary_text_dark"
+                    android:textIsSelectable="true" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
     <WebView
         android:id="@+id/leafletView"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
-        android:layout_weight=".6" />
+        android:layout_weight="3" />
 
 </LinearLayout>
