--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -37,7 +37,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/primary_text_dark"
-                android:textIsSelectable="true" />
+                android:textIsSelectable="true"
+                android:layout_column="2" />
         </TableRow>
 
         <TableRow
@@ -58,7 +59,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/primary_text_dark"
-                android:textIsSelectable="true" />
+                android:textIsSelectable="true"
+                android:layout_column="2" />
 
         </TableRow>
 
@@ -81,7 +83,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/primary_text_dark"
-                    android:textIsSelectable="true" />
+                    android:textIsSelectable="true"
+                    android:layout_column="2" />
             </TableRow>
         
         <TableRow
@@ -102,7 +105,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/primary_text_dark"
-                android:textIsSelectable="true" />
+                android:textIsSelectable="true"
+                android:layout_column="2" />
         </TableRow>
 
         <TableRow
@@ -123,7 +127,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/primary_text_dark"
-                android:textIsSelectable="true" />
+                android:textIsSelectable="true"
+                android:layout_column="2"
+                android:text="@string/none" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5sp"
+                android:text="@string/other_lte_sites"
+                android:textColor="@android:color/primary_text_dark" />
+
+            <TextView
+                android:id="@+id/otherLteSites"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/primary_text_dark"
+                android:textIsSelectable="true"
+                android:layout_column="2"
+                android:text="@string/none" />
         </TableRow>
 
         <TableRow
@@ -144,7 +172,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/primary_text_dark"
-                android:textIsSelectable="true" />
+                android:textIsSelectable="true"
+                android:layout_column="2" />
         </TableRow>
 
         <TableRow
@@ -165,7 +194,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:columnCount="2" android:weightSum="2"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+                android:layout_column="2">
 
             <TextView
                 android:id="@+id/cdmaSigStrength"
